# advent-of-code-2022

./: .gitignore  LICENSE  README.md  leaderboard.py  setup.py
Gonduls/d01/: results.cpp
Gonduls/d02/: results.cpp
Gonduls/d03/: input.txt  part1.cpp  part2.cpp
Gonduls/d04/: input.txt  results.cpp
Gonduls/d05/: input.txt  part1.cpp  part2.cpp
Gonduls/d06/: part1.cpp  part2.cpp
Gonduls/d07/: part1.cpp  results.cpp
Gonduls/d08/: results.cpp
Gonduls/d09/: input.txt  part1.cpp  part2.cpp
Gonduls/d10/: input.txt  part1.cpp  part2.cpp
Gonduls/d11/: input.txt  part2.py  problem1.asm  problem2.asm
MatteoBlack/d01/: day01.py
MatteoBlack/d02/: day02.py
MatteoBlack/d03/: day03.py  input.txt
MatteoBlack/d04/: day04.py
MatteoBlack/d05/: day05.py  input.txt
MatteoBlack/d06/: day06.py
MatteoBlack/d07/: day07.py
MatteoBlack/d08/: day08.py  input.txt
MatteoBlack/d09/: day09.py  input.txt
MatteoBlack/d10/: day10.py
MatteoBlack/d11/: day11.py  input.txt
MatteoBlack/d12/: day12.py
Puricelli/d01/: input.txt  puzzle1.py
Tommimon/: CMakeLists.txt  input-downloader.py  py++.cpp  py++.hpp
Tommimon/d01/: input  part1and2.cpp
Tommimon/d02/: part1and2.cpp
Tommimon/d03/: part1and2.cpp
Tommimon/d04/: part1and2.cpp
Tommimon/d05/: input  part1and2.cpp
Tommimon/d06/: part1and2.cpp
Tommimon/d07/: input  part1and2.cpp
Tommimon/d08/: part1.cpp  part2.cpp
Tommimon/d09/: part1and2.cpp
Tommimon/d10/: part1and2.cpp
Tommimon/d11/: part1.cpp  part2.cpp
Tommimon/d12/: part1and2.cpp
Tommimon/d13/: part1and2.cpp
Tommimon/d14/: part1and2.cpp
Tommimon/d15/: part1.cpp  part2.cpp
Tommimon/d16/: part1and2.cpp
Tommimon/d17/: input  part1and2.cpp
Tommimon/d18/: input  part1.cpp  part2.cpp
Tommimon/d19/: part1and2.cpp
Tommimon/d20/: input  part1and2.cpp
Tommimon/d21/: part1and2.cpp
Tommimon/d22/: part1.cpp  part2.cpp
Tommimon/d23/: part1and2.cpp
Tommimon/d24/: part1and2.cpp
Tommimon/d25/: input  part1and2.cpp
Tommimon/template/: part1and2.cpp
marcomole00/d01/: d1.raku  p1.py
marcomole00/d02/: sol.py
marcomole00/d03/: input  sol.py  test.py
marcomole00/d04/: sol.py
marcomole00/d05/: sol.py
marcomole00/d06/: sol.py
marcomole00/d07/: sol.py
marcomole00/d08/: sol.py
marcomole00/d09/: input  sol.py
marcomole00/d10/: input  sol.py
marcomole00/d11/: sol.py
marcomole00/d12/: input  sol.py
marcomole00/d13/: sol.py
marcoparadina/d01/: d01.py
marcoparadina/d02/: d02.py  out.txt
mynam3isg00d/d02/: README.txt  d02.json
mynam3isg00d/d07/: d07.py
mynam3isg00d/d09/: d09.py  input.txt
riccardo-negri/d01/: input.txt  x.go
riccardo-negri/d02/: x.go
riccardo-negri/d03/: x.go
riccardo-negri/d04/: x.go
riccardo-negri/d05/: input.txt
riccardo-negri/d06/: input.txt
riccardoinghilleri/d01/: main.py
riccardoinghilleri/d02/: main.py
riccardoinghilleri/d03/: main.py
riccardoinghilleri/d04/: input.txt  main.py
riccardoinghilleri/d05/: input.txt  main.py
riccardoinghilleri/d06/: main.py
riccardoinghilleri/d07/: input.txt  main.py
(+8 files in other folders)
