cmake_minimum_required(VERSION 3.23)
project(advent-of-code-2022)

set(CMAKE_CXX_STANDARD 23)

add_executable(day01 d01/part1and2.cpp py++.cpp)
add_executable(day02 d02/part1and2.cpp py++.cpp)
add_executable(day03 d03/part1and2.cpp py++.cpp)
add_executable(day04 d04/part1and2.cpp py++.cpp)
add_executable(day05 d05/part1and2.cpp py++.cpp)
add_executable(day06 d06/part1and2.cpp py++.cpp)
add_executable(day07 d07/part1and2.cpp py++.cpp)
add_executable(day08p1 d08/part1.cpp py++.cpp)
add_executable(day08p2 d08/part2.cpp py++.cpp)
add_executable(day09 d09/part1and2.cpp py++.cpp)
add_executable(day10 d10/part1and2.cpp py++.cpp)
add_executable(day11p1 d11/part1.cpp py++.cpp)
add_executable(day11p2 d11/part2.cpp py++.cpp)
add_executable(day12 d12/part1and2.cpp py++.cpp)
add_executable(day13 d13/part1and2.cpp py++.cpp)
add_executable(day14 d14/part1and2.cpp py++.cpp)
add_executable(day15p1 d15/part1.cpp py++.cpp)
add_executable(day15p2 d15/part2.cpp py++.cpp)
add_executable(day16 d16/part1and2.cpp py++.cpp)
add_executable(day17 d17/part1and2.cpp py++.cpp)
add_executable(day18p1 d18/part1.cpp py++.cpp)
add_executable(day18p2 d18/part2.cpp py++.cpp)
add_executable(day19 d19/part1and2.cpp py++.cpp)
add_executable(day20 d20/part1and2.cpp py++.cpp)
add_executable(day21 d21/part1and2.cpp py++.cpp)
add_executable(day22p1 d22/part1.cpp py++.cpp)
add_executable(day22p2 d22/part2.cpp py++.cpp)
add_executable(day23 d23/part1and2.cpp py++.cpp)
add_executable(day24 d24/part1and2.cpp py++.cpp)

include_directories(.)
